# SensorViz3D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SensorViz3D.sln
3rdprty/include/: minidocx.hpp
3rdprty/lib/: QXlsxQt5.lib  duckx.lib  libfftw3-3.lib  libfftw3f-3.lib  libfftw3l-3.lib  minidocx.lib  qcustomplot2.lib
3rdprty/lib/cmake/QXlsxQt5/: QXlsxQt5Config.cmake  QXlsxQt5Targets-release.cmake  QXlsxQt5Targets.cmake
SensorViz3D/: .gitignore  SensorViz3D.qrc  SensorViz3D.vcxproj  SensorViz3D.vcxproj.filters
SensorViz3D/app/: Application.cpp  Application.h  ChartsViewer.cpp  ChartsViewer.h  ChartsViewer.ui  InlineStyleDef.h  MainWindow.cpp  MainWindow.ui  ProjectData.cpp  ProjectData.h  main.cpp
SensorViz3D/charts/: ChartPainter.cpp  ChartPainter.h  PSDAnalyzer.cpp  PSDAnalyzer.h  ScalableCustomPlot.cpp  ScalableCustomPlot.h
SensorViz3D/doc/: example.docx
SensorViz3D/rwmat/: ReadWriteMatFile.cpp  ReadWriteMatFile.h
SensorViz3D/ui/: Main3DWidget.cpp  Main3DWidget.h
SensorViz3D/ui/base/: BaseDialog.cpp  BaseDialog.h  CustomFlowWidget.cpp  CustomFlowWidget.h  CustomFlowWidget.ui  HeaderWidget.ui  WindowManagerHelper.h
data/: addPropertyToMatFiles.m  bat.mlx  calculateVD.m
docs/: 开发记录.md
matlab/: deleteMatFilesCol.m  extractTxtDataToMat.m  invertMatData.m  processMatFiles.m  processPressureData.m
src/: SensorViz3D.qrc
src/3dviewer/: CameraManipulator.cpp  CameraManipulator.h  ComputeIntersection.cpp  ComputeIntersection.h  SceneViewer.cpp  SceneViewer.h  SceneViewer.ui
src/app/: Application.cpp  ChartsViewer.cpp  ChartsViewer.h  ChartsViewer.ui  InlineStyleDef.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProjectData.cpp  ProjectData.h  SceneCtrl.cpp  SceneCtrl.h  main.cpp
src/charts/: ChartPainter.cpp  ChartPainter.h  ScalableCustomPlot.cpp  ScalableCustomPlot.h
src/render/: ModelInterpolation.frag  ModelInterpolation.vert  Render.qrc  SensorPosition.txt
src/rwmat/: ReadWriteMatFile.cpp  ReadWriteMatFile.h
src/ui/: Main3DWidget.ui  RendPlayer.cpp  RendPlayer.h  RendPlayer.ui  SceneViewerSettings.cpp  SceneViewerSettings.h  SceneViewerSettings.ui  SensorValues.cpp  SensorValues.h  SensorValues.ui
src/ui/base/: BaseDialog.cpp  CustomFlowWidget.h  CustomFlowWidget.ui  HeaderWidget.cpp  HeaderWidget.h  NativeBaseWindow.cpp  NativeBaseWindow.h  OpeMessageBox.cpp  OpeMessageBox.h  WindowManagerHelper.cpp
